--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -68,6 +68,7 @@ button{
     height:30px;
     text-align: center;
 }   
+
 }
 
 iframe{
@@ -84,7 +85,7 @@ iframe{
         </div>
     </div>
 <div class="b">
-    <iframe src="https://my.spline.design/untitled-9c0f02d0c857e9c18b3f5d477b0c922e/"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe src='https://my.spline.design/untitled-6e2eea089a5b034f56fce6182b28c9f3/' frameborder='0' width='100%' height='100%'></iframe>
 
 </div>
       
@@ -94,4 +95,5 @@ iframe{
 </body>
 <script src="/sendalert.js"></script>
 <script src="/stopreload.js"></script>
+
 </html>
