--- a/views/patientmain.ejs
+++ b/views/patientmain.ejs
@@ -58,7 +58,7 @@
 <div class="nav">
     <h1>Patient main page</h1>
     <div>  <a href="/patient/main/consult"><button>Consult a Doctor</button></a>
-        <a href="/patient/main/drugs"><button>Drugs INFORMATION</button></a></div>
+        <a href="/patient/getmed"><button>Drugs INFORMATION</button></a></div>
         <form action="/patient/logout" method="post"><button>logout</button></form>
 
 </div>
