--- a/views/roompage.ejs
+++ b/views/roompage.ejs
@@ -17,7 +17,7 @@
             width: 100vw;
             min-height: 100vh;
             background-color: white;
-            position:relative;
+            position: relative;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
@@ -85,10 +85,10 @@
             width: auto;
             max-width: 450px;
             padding: 10px;
-            
+
         }
 
-    
+
 
         span {
             font-size: 22px;
@@ -135,8 +135,8 @@
         }
 
 
-        h3{
-            display:inline;
+        h3 {
+            display: inline;
             word-wrap: break-word;
         }
 
@@ -200,21 +200,27 @@
             display: inline-block;
         }
 
-        em ,h5{
+        em,
+        h5 {
             display: none;
         }
 
-        .leave{
-            z-index:2;
-            position:absolute;
-            top:10px;
-            border:0px;
-            background-color:transparent;
-            
+        .leave {
+            z-index: 2;
+            position: absolute;
+            top: 10px;
+            border: 0px;
+            background-color: transparent;
+
         }
-        .leave img{
-            width:30px 
-            
+
+        .leave img {
+            width: 30px
+        }
+
+        h4{
+            border: 2px solid;
+            text-align: center;
         }
     </style>
 </head>
@@ -222,8 +228,6 @@
 <body>
 
     <ul id="messages">
-
-
     </ul>
     <em>
         <%=name %>
@@ -250,14 +254,62 @@
 
 
 <script>
+ var who = document.getElementsByTagName('h5')[0].textContent.trim().toLowerCase(); // Normalize the input
+    function leave() {
+       
+        console.log(who)
+        const doc = document.getElementById('messages')
 
-function leave(){
-    const who=document.getElementsByTagName('h5')[0].textContent
-    if(who=="doctor")
-    window.location.href="/doctor/main/dhome"
-    else
-    window.location.href="/patient/main/consult"
-}
+        if (who === "doctor") {
+            const roomid = window.location.href.split('/')[4]
+            socket.emit('sendMessage',{
+                message:"doctor has left the Room",
+                roomid:roomid,
+                there:false
+            })
+           window.location.href='/doctor/dhome'
+            
+
+        }
+        else {
+            console.error("Unexpected value for 'who':", who); // Optional: Log unexpected values
+        }
+    }
+
+
+    
+
+const ul = document.getElementById('messages');
+
+// Create a MutationObserver to observe changes to the <ul> element
+const observer = new MutationObserver((mutationsList, observer) => {
+    for (let mutation of mutationsList) {
+        if (mutation.type === 'childList' && who === "patient") {
+            const h3 = ul.querySelector('.leavingmessage');
+            if (h3) {
+                console.log("Detected doctor has left the room.");
+                alert("You will be redirected in 1 minute.");
+                setTimeout(() => {
+                  
+                    setTimeout(() => {
+                        window.location.href = "/patient/writeReviews"; // Redirect after the second timeout
+                    }, 1000); // 1 second delay to ensure alert visibility
+                }, 60000); // 1-minute delay for the alert
+                observer.disconnect(); // Stop observing after the doctor leaves
+            }
+        }
+    }
+});
+
+// Configure the observer to look for child node additions/removals
+observer.
+observe(ul, {
+    childList: true, // Observe direct child elements
+    subtree: true,   // Observe all descendants, not just direct children
+});
+const roomid = window.location.href.split('/')[4]
+const name = document.getElementsByTagName('em')[0].textContent
+socket.emit('Roomregister', { roomid: roomid, name: name, who: who })
 
     document.getElementById('file').addEventListener('change', () => {
         console.log('Upload button clicked')
@@ -320,8 +372,6 @@ function leave(){
 
 
 
-
-
     const form = document.getElementById('form');
     const file = document.getElementById('file')
     const input = document.getElementById('input');
@@ -341,18 +391,19 @@ function leave(){
         else if (input.value || file.files) {
 
             const array = await uploadFile()
-            const who=document.getElementsByTagName('h5')[0].textContent
-            if(who=="doctor"){
-                const roomid=window.location.href.split('/')[4]
-            
-            socket.emit('Roomregister', {name:name,roomid:roomid,who:who})
-            socket.emit('sendMessage', { message: input.value, files: array ,who:who,roomid:roomid,sender:name});}
-            else{
-            const roomid=window.location.href.split('/')[4]
-            
-            socket.emit('Roomregister',{roomid:roomid,name:name,who:who})
-            socket.emit('sendMessage', { message: input.value, files: array ,who:who,sender:name,roomid:roomid});}
-            
+            const who = document.getElementsByTagName('h5')[0].textContent
+            if (who == "doctor") {
+                const roomid = window.location.href.split('/')[4]
+
+                socket.emit('sendMessage', { message: input.value, files: array, who: who, there:true,roomid: roomid, sender: name });
+            }
+            else {
+                const roomid = window.location.href.split('/')[4]
+
+                
+                socket.emit('sendMessage', { message: input.value, files: array, who: who,there:true, sender: name, roomid: roomid });
+            }
+
             const message = input.value
             input.value = '';
             const item = document.createElement('li');
@@ -378,7 +429,7 @@ function leave(){
                 }
 
                 else {
-                    const ifram = document.createElement('iframe')
+                    const iframe = document.createElement('iframe')
                     iframe.src = array[i].url
                     iframe.width = "600";
                     iframe.height = "400";
@@ -402,6 +453,18 @@ function leave(){
 
 
     socket.on('newMessage', (msg) => {
+console.log(msg)
+
+        if(msg.message=="doctor has left the Room"){
+            console.log("i am here")
+            const doc = document.getElementsByTagName('ul')[0]
+            const h3ele=document.createElement('h4')
+            h3ele.className="leavingmessage"
+            h3ele.textContent=msg.message
+            doc.append(h3ele)
+            
+        }
+        else{
         const item = document.createElement('li');
         item.className = "leftside"
         item.innerHTML = `
@@ -435,11 +498,11 @@ function leave(){
                 item.appendChild(iframe)
             }
 
-        }
+        }}
 
 
 
-        item.scrollIntoView({ behaviour: 'smooth', block: 'nearest' })
+        // item.scrollIntoView({ behaviour: 'smooth', block: 'nearest' })
     });
 </script>
 <script src="/sendalert.js"></script>
